[AB#87133-Add-navigation-item-to-sidebar] Fixed icon spacing

--- a/src/CSF.SRDashboard.Client/Shared/NavMenu.razor.css
+++ b/src/CSF.SRDashboard.Client/Shared/NavMenu.razor.css
@@ -42,8 +42,6 @@
 
 .nav-item ::deep a.active {
     background-color: #E0E7F1;
-    font-weight: normal;
-    color: white;
 }
 
 
