--- a/src/CSF.SRDashboard.Client/wwwroot/css/site.css
+++ b/src/CSF.SRDashboard.Client/wwwroot/css/site.css
@@ -96,7 +96,8 @@ ul.nav[b-ussj044e2c] {
 .nav-item[b-ussj044e2c] a.active,
 .nav-item[b-ussj044e2c] a:hover {
     font-family: Helvetica;
-    color: #1B50B1;
+    font-weight: bold;
+    color: #143c85;
 }
 
 .nav-item[b-ussj044e2c] a,
